--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,21 @@ body {
   color:  #464646;
 }
 
+.visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 .main-header {
   background-color: #f7e296;
@@ -128,7 +143,7 @@ body {
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 0.18px;
-  color: #000;
+  color: #000000;
 }
 
 .visually-hidden__filter_round-buttons-from ,
@@ -359,4 +374,4 @@ body {
   text-align: right;
 }
 
-
+     /*----setka----*/
